<resources>
    <string name="app_name">huanxin</string>
    <string name="loading">正在加载</string>
    <string name="user">用户名</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login1">登录</string>
    <string name="index">主页</string>
    <string name="conversion">会话</string>
    <string name="book">book</string>
    <string name="out">退出登录</string>
    <string name="invocation">邀请信息</string>
    <string name="accept">接受</string>
    <string name="refuse">丑拒</string>
    <string name="group">群组</string>
    <string name="create_group">创建群组</string>
    <string name="group_desc">群介绍</string>
    <string name="group_reason">创建理由</string>
    <string name="group_num">用户数量</string>
    <string name="create">创建</string>
    <string name="nevigate">取消</string>
    <string name="member">选择成员</string>
    <string name="allchoice">全选</string>
    <string name="sure">sure</string>
    <string name="choice">选择</string>
</resources>
