<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/em_welcom_logo"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:drawableRight="@drawable/em_icon_account"
                android:hint="@string/user"
                android:maxLines="1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_user"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:drawableRight="@drawable/em_icon_pwd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_pwd"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/et_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:drawableRight="@drawable/em_icon_pwd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/rl_confirm"
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textColor="@drawable/selector_blacktow"
            android:background="@drawable/selector_bluetow"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>